Convert to webpack, index.html working but not createEvent.html

--- a/client/index.html
+++ b/client/index.html
@@ -3,19 +3,30 @@
 <head>
   <meta charset="utf-8">
   <title>Friends</title>
-  <script src="scripts/react/dist/react.js"></script>
-  <script src="scripts/react-dom/dist/react-dom.js"></script>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- STYLES -->
+  <link rel="stylesheet" href="styles/styles.css">
+
+  <!-- LIBRARIES -->
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
+
 </head>
 <body>
 
   <div id="HomepageApp"></div>
 
-  <script src="compiled/client/Components/Photos.js"></script>
+  <!-- WEBPACK -->
+  <script src="bundle.js"></script>
+
+  <!-- REACT -->
+<!--   <script src="scripts/react/dist/react.js"></script>
+  <script src="scripts/react-dom/dist/react-dom.js"></script> -->
+
+  <!-- REACT COMPONENTS -->
+<!--   <script src="compiled/client/Components/Photos.js"></script>
   <script src="compiled/client/Components/Reminders.js"></script>
   <script src="compiled/client/Components/Activities.js"></script>
   <script src="compiled/client/Components/WhatToBring.js"></script>
@@ -27,6 +38,6 @@
   <script src='compiled/client/Components/nav.js'></script>
   <script src='compiled/client/Components/EventList.js'></script>
   <script src='compiled/client/Components/EventListEntry.js'></script>
-  <script src='compiled/client/HomepageAppIndex.js'></script>
+  <script src='compiled/client/HomepageAppIndex.js'></script> -->
 </body>
 </html>
