Complete webpack setup

--- a/client/createEvent.html
+++ b/client/createEvent.html
@@ -3,23 +3,24 @@
     <head>
       <meta charset="utf-8">
       <title>Friends</title>
-      <link rel="stylesheet" href="styles/style.css">
+
+      <!-- STYLES -->
+      <link rel="stylesheet" href="styles/styles.css">
+
+      <!-- LIBRARIES -->
       <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
+
     </head>
     <body>
+
+      <!-- VIEW -->
       <div id="CreateEventApp"></div>
 
-      <script src="bundle.js"></script>
+      <!-- WEBPACK -->
+      <script src="/createEvent.bundle.js"></script>
 
-      <!-- REACT -->
-<!--       <script src="scripts/react/dist/react.js"></script>
-      <script src="scripts/react-dom/dist/react-dom.js"></script> -->
-      <!-- REACT CUSTOM -->
-<!--       <script src="compiled/client/Components/CreateEventApp.js"></script>
-      <script src='compiled/client/Components/nav.js'></script>
-      <script src="compiled/client/CreateEventAppIndex.js"></script> -->
     </body>
   </html>
