--- a/client/index.html
+++ b/client/index.html
@@ -16,28 +16,11 @@
 </head>
 <body>
 
+  <!-- VIEW -->
   <div id="HomepageApp"></div>
 
   <!-- WEBPACK -->
-  <script src="bundle.js"></script>
+  <script src="/index.bundle.js"></script>
 
-  <!-- REACT -->
-<!--   <script src="scripts/react/dist/react.js"></script>
-  <script src="scripts/react-dom/dist/react-dom.js"></script> -->
-
-  <!-- REACT COMPONENTS -->
-<!--   <script src="compiled/client/Components/Photos.js"></script>
-  <script src="compiled/client/Components/Reminders.js"></script>
-  <script src="compiled/client/Components/Activities.js"></script>
-  <script src="compiled/client/Components/WhatToBring.js"></script>
-  <script src="compiled/client/Components/FeatureNavigation.js"></script>
-  <script src="compiled/client/Components/EventPlanning.js"></script>
-
-  <script src='compiled/client/eventData.js'></script>
-  <script src='compiled/client/Components/HomepageApp.js'></script>
-  <script src='compiled/client/Components/nav.js'></script>
-  <script src='compiled/client/Components/EventList.js'></script>
-  <script src='compiled/client/Components/EventListEntry.js'></script>
-  <script src='compiled/client/HomepageAppIndex.js'></script> -->
 </body>
 </html>
