Integrate react-router

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Friends</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>FRIENDS</title>
 
-  <!-- STYLES -->
-  <link rel="stylesheet" href="styles/styles.css">
+    <!-- STYLES -->
+    <link rel="stylesheet" href="styles/styles.css">
 
-  <!-- LIBRARIES -->
-  <script
-    src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
+    <!-- LIBRARIES -->
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
 
-</head>
-<body>
+  </head>
+  <body>
 
-  <!-- VIEW -->
-  <div id="HomepageApp"></div>
+    <!-- VIEW -->
+    <div id="app"></div>
 
-  <!-- WEBPACK -->
-  <script src="/index.bundle.js"></script>
+    <!-- WEBPACK -->
+    <script src="./bundle.js"></script>
 
-</body>
+  </body>
 </html>
