Chatroom component created as well as server-side socket.io

--- a/client/public/createEvent.html
+++ b/client/public/createEvent.html
@@ -22,5 +22,7 @@
       <!-- WEBPACK -->
       <script src="/createEvent.bundle.js"></script>
 
+      <script src="/socket.io/socket.io.js"></script>
+
     </body>
   </html>
