Add new user when invited

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     <div id="app"></div>
 
     <!-- WEBPACK -->
-    <script src="./bundle.js"></script>
+    <script src="/bundle.js"></script>
 
   </body>
 </html>
