Render and center map on set coordinates, translate postal address to coordinates via Google API

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,9 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
 
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=">
+      </script>
+
   </head>
   <body>
 
