--- a/client/public/signup.html
+++ b/client/public/signup.html
@@ -28,7 +28,7 @@
     <div class="row">
       <h1>Sign Up</h1>
       <div class="input-field col s12">
-        <input placeholder="Password" id="login" type="text" class="validate">
+        <input placeholder="Username" id="signup" type="text" class="validate">
         <button class="btn waves-effect waves-light" type="submit" name="action" onclick="signup()">Sign up
         </button><br>
         <a class="link" href="/login.html">Already have an account? Login!</a>
